--- a/source/isaaclab_tasks/isaaclab_tasks/manager_based/manipulation/lift/config/franka/agents/distill_student.yaml
+++ b/source/isaaclab_tasks/isaaclab_tasks/manager_based/manipulation/lift/config/franka/agents/distill_student.yaml
@@ -1,18 +1,32 @@
 # distill_student.yaml
-agent:
-  algorithm:
-    class_name: Distillation
-    num_learning_epochs: 5
-    learning_rate: 1e-3
-    gradient_length: 32
-    max_grad_norm: 1.0
-  policy:
-    class_name: StudentTeacher
-    init_noise_std: 0.1
-    student_hidden_dims: [256, 256, 256]
-    teacher_hidden_dims: [256, 256, 256]   # match your PPO actor
-    activation: elu
-  num_steps_per_env: 32
-  max_iterations: 2000
-  empirical_normalization: true
-  save_interval: 50
+# @package _group_
+# This file defines the whole agent (RslRlOnPolicyRunnerCfg)
+seed: 42
+device: cuda:0
+num_steps_per_env: 24
+max_iterations: 3000
+empirical_normalization: false
+
+policy:
+  class_name: StudentTeacher
+  init_noise_std: 0.5
+  noise_std_type: scalar
+  student_hidden_dims: [256, 256, 256]
+  teacher_hidden_dims: [256, 256, 256]
+  activation: elu
+
+algorithm:
+  class_name: Distillation
+  num_learning_epochs: 5
+  learning_rate: 1e-3
+  gradient_length: 32
+  max_grad_norm: 1.0
+
+clip_actions: null
+save_interval: 50
+experiment_name: franka_lift
+run_name: ""
+logger: tensorboard
+resume: false
+load_run: ".*"
+load_checkpoint: "model_.*.pt"
