include resume and checkpoint

--- a/source/isaaclab_tasks/isaaclab_tasks/manager_based/manipulation/lift/config/franka/agents/distill_student.yaml
+++ b/source/isaaclab_tasks/isaaclab_tasks/manager_based/manipulation/lift/config/franka/agents/distill_student.yaml
@@ -26,4 +26,7 @@ clip_actions: null
 save_interval: 50
 experiment_name: franka_lift
 run_name: ""
+resume: true
+load_run: 2025-08-06_14-57-09
+load_checkpoint: model_2999.pt
 logger: tensorboard
